# QML-Android-Demo

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md
android/: AndroidManifest.xml.cmake  CMakeLists.txt  README.md  configAndroid.json.cmake
cmake/: rcc.cmake
src/: CMakeLists.txt  Demo.qml  README.md  demo.cpp  demo.qrc
tools/: CMakeLists.txt  README.md
tools/androiddeployqt/: CMakeLists.txt  README.md
